--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "@vitest/ui": "^0.34.0",
     "eslint": "^8.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.0.0",
     "typescript": "^5.0.0",
     "vite": "^4.0.0",
-    "vitest": "^0.34.0",
-    "@vitest/ui": "^0.34.0"
+    "vitest": "^0.34.0"
   },
   "dependencies": {
     "howler": "^2.2.4"
@@ -53,4 +54,4 @@
     "url": "https://github.com/sl4ppy/circuit-breaker/issues"
   },
   "homepage": "https://github.com/sl4ppy/circuit-breaker#readme"
-} 
+}
