--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
@@ -34,6 +35,7 @@
     "eslint": "^8.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.0",
+    "gh-pages": "^6.3.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.0.0",
     "typescript": "^5.0.0",
@@ -53,5 +55,5 @@
   "bugs": {
     "url": "https://github.com/sl4ppy/circuit-breaker/issues"
   },
-  "homepage": "https://github.com/sl4ppy/circuit-breaker#readme"
+  "homepage": "https://sl4ppy.github.io/CircuitBreaker/"
 }
