Fix deployment configuration - Update base path to match GitHub Pages URL

--- a/package.json
+++ b/package.json
@@ -55,5 +55,5 @@
   "bugs": {
     "url": "https://github.com/sl4ppy/circuit-breaker/issues"
   },
-  "homepage": "https://sl4ppy.github.io/CircuitBreaker/"
+  "homepage": "https://sl4ppy.github.io/circuit-breaker/"
 }
