--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "circuit-breaker",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A neon cyberpunk pinball game with realistic physics, level progression, and dynamic audio",
   "type": "module",
   "scripts": {
@@ -45,7 +45,9 @@
     "vitest": "^0.34.0"
   },
   "dependencies": {
-    "howler": "^2.2.4"
+    "@types/js-yaml": "^4.0.9",
+    "howler": "^2.2.4",
+    "js-yaml": "^4.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
